# dagster-lambda-compute-demo

./: .env.example  README.md  dagster_cloud.yaml  deployment_settings.yaml  pyproject.toml
.github/workflows/: deploy.yml
infra/: cdk.json  cdk_app.py  lambda_stack.py  requirements.txt
lambdas/compute/: handler.py  requirements.txt
modal_apps/compute/: app.py  requirements.txt
src/lambda_compute_demo/components/: lambda_compute_component.py  lambda_with_provisioning_component.py  modal_compute_component.py  modal_with_deploy_component.py
src/lambda_compute_demo/defs/lambda_jobs/: defs.yaml
src/lambda_compute_demo/defs/lambda_jobs_with_provisioning/: defs.yaml
src/lambda_compute_demo/defs/modal_jobs/: defs.yaml
src/lambda_compute_demo/defs/modal_jobs_with_deploy/: defs.yaml
