[project]
name = "lambda_compute_demo"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "boto3>=1.43.10",
    "dagster==1.13.5",
    "dagster-aws>=0.29.5",
    "dagster-modal>=0.0.5",
    "modal>=1.4.3",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "lambda_compute_demo"
registry_modules = [
    "lambda_compute_demo.components.*",
]


